# OOP-task

./: AI.cpp  AI.h  Board3x3.cpp  Board3x3.h  Board4x4.cpp  Board4x4.h  CMakeLists.txt  Constants.h  FontLoader.cpp  FontLoader.h  GameBoard.h  GameState.h  GestureRecognizer.cpp  GestureRecognizer.h  MenuButton.cpp  MenuButton.h  Renderer.cpp  Renderer.h  main.cpp
